@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    Make hints about guards work on patterns/infix matches/case alts
     Make finding guards look a child functions
     Correctly collapse functions and lambdas using the same patterns
     Suggest promoting patterns bound to lambdas to functions
